# Cpp-Godot-Project-Template

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
cpp/: CMakeLists.txt
cpp/doc_classes/: MyNode.xml
cpp/include/godot/: MyNode.hpp
cpp/src/: register_types.cpp
cpp/src/godot/: MyNode.cpp
godot/project/: myextension.gdextension
tools/: rename_extension.py
